Add README.md with analysis results Fix plot labels, titles

--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
+# RStudio files
 .Rproj.user
 .Rhistory
 .RData
 .Ruserdata
 .Rproj.user
+
+# MacOS
 .DS_Store
+
+# Idea project files
+.idea/
 
 # gene expression data csv files
 data/*
